<resources>
    <string name="app_name">鸿讯</string>
    <string name="custom_progress_dialog_loading_tips">请求网络中</string>
    <string name="bottom_name_home">聊天</string>
    <string name="bottom_name_friend">好友</string>
    <string name="bottom_name_me">我</string>
    <string name="send">发送</string>
    <string name="menu_message">消息</string>
    <string name="tips_netty_disconnect">断开连接</string>
    <string name="tips_netty_reconnect">重新连接</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="username">邮箱</string>
    <string name="signature">个性签名</string>
    <string name="logout">退出登录</string>
    <string name="remark_name">备注</string>
    <string name="add_friend">添加好友</string>
    <string name="hint_search">搜索用户</string>
    <string name="tips_search_key_is_empty">请输入想要搜索的内容</string>
</resources>