<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="data"
            type="com.example.hxchat.data.model.bean.UserInfo" />
        <variable
            name="click"
            type="com.example.hxchat.ui.fragment.userinfo.meUserInfoFragment.ProxyClick" />
    </data>
    <LinearLayout
        android:background="@mipmap/bg16"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/center_toolbar"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvLabelAvatar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_80dp"
                android:alpha="0.6"
                android:text="@string/avatar"
                android:textColor="@color/text_6"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/size_12dp"
                android:paddingBottom="@dimen/size_12dp"
                android:paddingLeft="@dimen/size_16dp"
                android:paddingRight="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableRight="@drawable/ec_next"
                android:background="@drawable/white_selector"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="@{()->click.toEditIcon()}" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/size_60dp"
                android:layout_height="@dimen/size_60dp"
                android:src="@drawable/default_avatar"
                android:layout_marginRight="@dimen/size_40dp"
                bind:avatar="@{data.icon}"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/line"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelAvatar"
                />
            <TextView
                android:id="@+id/tvLabelNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:alpha="0.6"
                android:textColor="@color/text_6"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/size_line"
                android:paddingTop="@dimen/size_12dp"
                android:paddingBottom="@dimen/size_12dp"
                android:paddingLeft="@dimen/size_16dp"
                android:paddingRight="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableRight="@drawable/ec_next"
                android:background="@drawable/white_selector"
                android:onClick="@{()->click.toEditNickname()}"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelAvatar" />
            <TextView
                android:id="@+id/tvNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_40dp"
                android:textColor="@color/text_80"
                android:gravity="center_vertical"
                android:text="@{data.nickname}"
                tools:text="Pbihao"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelAvatar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelNickname"/>
            <TextView
                android:id="@+id/tvLabelUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:alpha="0.6"
                android:textColor="@color/text_6"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/size_line"
                android:paddingTop="@dimen/size_12dp"
                android:paddingBottom="@dimen/size_12dp"
                android:paddingLeft="@dimen/size_16dp"
                android:paddingRight="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:background="@drawable/white_selector"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelNickname" />
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_26dp"
                android:textColor="@color/text_80"
                android:gravity="center_vertical"
                android:text="@{data.email}"
                tools:text="1435343052@qq.com"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelNickname"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelUsername"/>
            <TextView
                android:id="@+id/tvLabelSignature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signature"
                android:alpha="0.6"
                android:layerType="none"
                android:textColor="@color/text_6"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/size_line"
                android:paddingTop="@dimen/size_12dp"
                android:paddingBottom="@dimen/size_12dp"
                android:paddingLeft="@dimen/size_16dp"
                android:paddingRight="@dimen/size_16dp"
                android:drawablePadding="@dimen/size_4dp"
                android:drawableRight="@drawable/ec_next"
                android:background="@drawable/white_selector"
                android:onClick="@{()->click.toEditSgnature()}"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelUsername" />
            <TextView
                android:id="@+id/tvSignature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_40dp"
                android:textColor="@color/text_80"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxEms="@integer/signature_max_length"
                android:text="@{data.signature}"
                tools:text="死亡如风，常伴吾身"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelUsername"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabelSignature"/>
            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20dp"
                android:layout_marginRight="@dimen/size_20dp"
                android:layout_marginTop="@dimen/size_30dp"
                android:textColor="@color/white"
                android:text="@string/logout"

                android:textSize="@dimen/size_16sp"
                android:background="@drawable/btn_bg_selector"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelSignature"
                android:onClick="@{()->click.quitLogin()}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>